# JELAI

./: .gitignore  ADMIN_DASHBOARD_IMPLEMENTATION.md  CSV Data Cleaning and Analytics.ipynb  Docker_Cleanup_Summary.md  EDA-1.ipynb  EDA-Marcus.ipynb  LICENSE.md  MIGRATION_GUIDE.md  Pandas.ipynb  Production_Config_Update.md  README.md  app.py  app_history_logs.txt  applogshist.txt  chat_interact.py  chatbot_requirements.txt  dev.py  docker-compose-dev.yml  history_app.py  interface_requirements.txt  main.py  process_logs.py  reqs_jupyter.txt  requirements.txt  utils.py  ydoc_chat_integration.md
.github/: copilot-instructions.md
docs/: multi-course-admin-dashboard-prd.md  multi-course-admin-dashboard-techspec.md
evaluation/: classifier.py  evaluation.ipynb
jupyterhub-docker/: .env.example  Dockerfile.jupyterhub  docker-compose-dev.yml  docker-compose.yml  jupyterhub_config.py
jupyterhub-docker/admin-dashboard/: DEV_AUTH.md  Dockerfile  app.py  pyproject.toml  requirements.txt
jupyterhub-docker/admin-dashboard/static/: dashboard.css  dashboard.js
jupyterhub-docker/admin-dashboard/templates/: dashboard.html  dashboard_old.html
jupyterhub-docker/middleware/: .dockerignore  .env.example  DEVELOPMENT.md  Dockerfile  README.md  __init__.py  admin_api.py  analytics_cli.py  courses.py  ea-handler.py  learning_objectives.yaml  llm_handler.py  llm_older_handler.py  middleware_requirements.txt  pyproject.toml  requirements.txt  seed_courses.py  setup.cfg  start.sh  ta-handler.py  td-agent.conf  utils.py
jupyterhub-docker/middleware/inputs/: ab_experiments.json  assignment_description.txt  classification_options.txt  classification_options.txt.sample  classification_prompt.txt  classification_prompt.txt.sample  ea_system_prompt.txt  ea_system_prompt.txt.sample  pedagogical_personalities.json  ta_system_prompt.txt  ta_system_prompt.txt.sample
jupyterhub-docker/middleware/inputs/assignment_descriptions/: JELAI_AIED_Demo.txt  Task.txt.sample  Task1.txt  Task2.txt
jupyterhub-docker/middleware/inputs/learning_objectives/: JELAI_AIED_Demo.txt  Task.txt.sample  Task1.txt  Task2.txt
jupyterhub-docker/middleware/inputs/next_steps/: Task.txt.sample  Task1.txt  Task2.txt
jupyterhub-docker/middleware/scripts/: container_test.py
jupyterhub-docker/scripts/: cli_test.ps1  course_spawner.py
jupyterhub-docker/tests/: conftest.py  (+2 more)
learning_materials/: README.md
log_processor/: SETUP.md  cell_activity.py  chatbot.py  log.py  notes.md  processor.py  prompt_metric.py  sub_task.py  task.py  user.py  users.py
old/: eda-chat-1-marcus.txt  eda-chat-marcus.txt  test-chat-marcus.txt  test_chat_test.txt  test_chat_test1.txt  test_chat_test2.txt  test_chat_test2_2.txt
(+54 files in other folders)
