[project]
name = "jelai-admin-dashboard"
version = "0.1.0"
description = "JELAI Admin Dashboard - Web interface for educators to manage the system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "jinja2>=3.1.2",
    "pandas>=2.1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
