[project]
name = "jelai-admin-dashboard"
version = "0.1.0"
description = "JELAI Admin Dashboard - Web interface for educators to manage the system"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "httpx",
    "PyJWT",
    "python-jose[cryptography]"
]

[tool.hatch.build.targets.wheel]
packages = ["."]
