[project]
name = "middleware"
version = "0.1.1"
description = "middleware uv project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "rapidfuzz",
    "thefuzz",
    "fluent-logger",
    "httpx",
    "asyncio",
    "flask",
    "pandas",
    "werkzeug"
]